syntax = "proto3";
package tendermint.crypto;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/crypto";

import "gogoproto/gogo.proto";

// CompositePublicKey allows to use different public keys for different features
message CompositePublicKey {
  option (gogoproto.compare) = true;
  option (gogoproto.equal)   = true;

  PublicKey sign_key = 1;
  PublicKey vrf_key  = 2;
}

// PublicKey defines the keys available for use with Tendermint Validators
message PublicKey {
  option (gogoproto.compare) = true;
  option (gogoproto.equal)   = true;

  oneof sum {
    bytes ed25519   = 1;
    bytes secp256k1 = 2;

    // *** Ostracon Extended Fields ***
    CompositePublicKey composite = 1000;
    bytes              bls12     = 1001;
  }
}
